<resources>
    <string name="app_name">Parcel</string>
    <string name="copyright">Copyright ©2019 Powered by Foot Print</string>

    <!-- Login Activity -->
    <string name="email">Username or Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="signin_word"> Sign in to Start Your Session </string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!--Error String-->
    <string name="error_msg">Please Fill Up The Field</string>
    <string name="net_error">Please Check Your Internet Connection
                                and Try Again!</string>
    <string name="try_again">Try Again</string>
    <string name="invalid">Invalid Username or Password</string>

    <!-- Extra String-->
    <string name="exit">Exit</string>
    <string name="exit_msg">Do you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- Home page-->
    <string name="merchant_profile">Merchant Profile</string>
    <string name="merchant_request">Merchant Request</string>
    <string name="product">Product</string>
    <string name="pick_up_report">Pick Up Report</string>
    <string name="parcel_return_report">Parcel Return Report</string>

    <!--Home page:  Header line-->
    <string name="monthly_report">Monthly View</string>
    <string name="contacts">Contacts</string>
    <string name="dashboard">Dashboard</string>
    <string name="menu_content">Menu Content</string>
    <string name="communication">Communication</string>
    <string name="report">Report</string>


    <!--Home Page Content Part-1-->
    <string name="current_month">Current Month</string>
    <string name="pick_up">Pick Up</string>
    <string name="delivery">Delivery</string>
    <string name="cancel">Cancel</string>
    <string name="parcel_return">Parcel Return</string>
    <string name="on_process">On Process</string>
    <string name="total">Total</string>
    <string name="demo_num">2020</string>


    <!--Home Page Content Part - 3-->
    <string name="call">Call</string>
    <string name="msg">Messenger</string>

    <!--Merchant Profile-->
    <string name="gen_info">General Information</string>
    <string name="contact_info">Contact Information</string>
    <string name="business_info">Business Information</string>
    <string name="billing_info">Billing Information</string>


    <string name="colon"> : </string>
    <string name="mer_name">Merchant Name :</string>
    <string name="mer_contact">Contact Number : </string>
    <string name="mer_email">Email : </string>
    <string name="license_no">Trade License Number : </string>
    <string name="post_code">Post Code : </string>
    <string name="address">Address : </string>
    <string name="mailing_address">Mailing Address : </string>
    <string name="permanant_address">Permanent Address : </string>


    <string name="contact_name">Full Name : </string>
    <string name="contact_person_pos">Contact Person Position : </string>
    <string name="contact_mail">Contact Email : </string>


    <string name="business_name">Business Name : </string>
    <string name="business_nature">Business Nature : </string>
    <string name="pro_type">Product Type : </string>
    <string name="website">Website : </string>
    <string name="fb_page">Facebook Page : </string>
    <string name="fb_page_link">Facebook Page Link : </string>


    <string name="payment_mode">Payment Mode : </string>
    <string name="bank_name">Bank Name : </string>
    <string name="bank_no">Bank A/C No : </string>
    <string name="bank_branch">Bank Branch/Address : </string>
    <string name="bkash">Bkash No : </string>
    <string name="rocket">Rocket No : </string>


    <!--Merchant Requisition-->
    <string name="service_name">Service Name</string>
    <string name="district_name">District Name</string>
    <string name="deliver_person">Delivery Person</string>
    <string name="delivery_date">Delivery Date</string>
    <string name="save">Save</string>
    <string name="select_date">Select a date</string>
    
    
  <!--  Product  -->
    <string name="pro_config">Product Configuration</string>
    <string name="pro_name">Product Name*</string>
    <string name="pro_category">Product Category</string>
    <string name="pro_unit">Unit</string>
    <string name="pro_measurement">Measurement(SFT)</string>
    <string name="pro_weight">Weight(KG)</string>
    <string name="pro_rate">Rate(BDT)</string>
    <string name="is_active">Active</string>
    <string name="checkbox_error">Please Active the Product for Saving Information!</string>



    <!--Merchant Billing Report-->
    <string name="merchant_billing">Merchant Billing</string>
    <string name="to">To</string>
    <string name="personal_information">Personal Info.</string>
    <string name="parcel_value">Parcel Value</string>
    <string name="cod_charge">COD Charge</string>
    <string name="service_charge">Service Charge</string>
    <string name="merchant_bill">Merchant Bill</string>
    <string name="status">Status</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>

    <string name="sub_total">Sub Total</string>
    <string name="no_data">No Data Found</string>


</resources>
