<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_mer_profile"
            android:icon="@mipmap/ic_profile"
            android:title="@string/merchant_profile"
            android:iconTint="@color/colorPink"/>
        <item
            android:id="@+id/nav_mer_req"
            android:icon="@mipmap/ic_request"
            android:title="@string/merchant_request"
            android:iconTint="@color/colorGreen"/>

        <item
            android:id="@+id/nav_mer_product"
            android:icon="@mipmap/ic_product"
            android:title="@string/product"
            android:iconTint="@color/colorDarkPurple"/>

        <item
            android:id="@+id/nav_mer_bill"
            android:icon="@mipmap/ic_billing"
            android:title="@string/merchant_billing"
            android:iconTint="@color/colorDarkBlue"/>

    </group>

</menu>
