<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.LogIn"
    android:background="@drawable/bg_blue_shade_top_bottom">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/global_16dp"
        android:layout_gravity="center"
        app:cardCornerRadius="@dimen/global_16dp"
        app:cardElevation="@dimen/global_32dp">

    <!--Innerlayout of CardView-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/global_8dp"
            android:fontFamily="sans-serif"
            android:text="@string/signin_word"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>


        <!--Username Entry Field-->
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@mipmap/ic_email"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            style="@style/EditText"/>

        <!--Password entry Field.....-->
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@mipmap/ic_password"
            android:hint="@string/password"
            android:inputType="textPassword"
            style="@style/EditText"/>

        <!--Sign in Button-->
        <Button
            android:id="@+id/sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:layout_margin="16dp"
            android:layout_gravity="right"
            style="@style/Button"/>

    </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>