<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.MerchantInfoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/global_8dp">


       <!-- Merchant Name-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/global_16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mer_name"
            style="@style/NormalTextView" />


        <TextView
            android:id="@+id/merchant_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/NormalTextViewItalic" />

    </LinearLayout>


      <!--  Contact Number-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="@dimen/global_16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mer_contact"
            style="@style/NormalTextView"/>


        <TextView
            android:id="@+id/merchant_phn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            style="@style/NormalTextViewItalic" />

    </LinearLayout>


        <!-- Merchant Email Address-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="@dimen/global_16dp">

            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mer_email"
            style="@style/NormalTextView" />



        <TextView
            android:id="@+id/merchant_mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            style="@style/NormalTextViewItalic" />

        </LinearLayout>


       <!-- Merchant Trade License number-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="@dimen/global_16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/license_no"
            style="@style/NormalTextView" />

        <TextView
            android:id="@+id/merchant_trade_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            style="@style/NormalTextViewItalic" />

        </LinearLayout>


        <!--Merchant Post Code-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="@dimen/global_16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post_code"
            style="@style/NormalTextView" />


        <TextView
            android:id="@+id/merchant_post_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            style="@style/NormalTextViewItalic" />

        </LinearLayout>


       <!-- Merchant General Address-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="@dimen/global_16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            style="@style/NormalTextView" />


        <TextView
            android:id="@+id/merchant_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            style="@style/NormalTextViewItalic" />

        </LinearLayout>


    <!-- Merchant Mailing Address-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="@dimen/global_16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mailing_address"
            style="@style/NormalTextView" />


        <TextView
            android:id="@+id/merchant_mailing_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/NormalTextViewItalic" />

        </LinearLayout>


    <!-- Merchant Permanant Address-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="@dimen/global_16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/permanant_address"
            style="@style/NormalTextView" />


        <TextView
            android:id="@+id/merchant_permanent_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/NormalTextViewItalic" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>