<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.BillingInfoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/global_8dp">


        <!--Payment Mode-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/global_16dp"
            android:orientation="vertical">

            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_mode"
            style="@style/NormalTextView" />



        <TextView
            android:id="@+id/payment_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/NormalTextViewItalic" />

        </LinearLayout>

    <!--Bank Account Name-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/global_16dp"
            android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bank_name"
            style="@style/NormalTextView" />



        <TextView
            android:id="@+id/bank_ac_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/NormalTextViewItalic" />

        </LinearLayout>



            <!--Bank Account number-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/global_16dp"
            android:orientation="vertical">


            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bank_no"
            style="@style/NormalTextView" />



        <TextView
            android:id="@+id/bank_ac_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/NormalTextViewItalic" />

        </LinearLayout>

       <!-- Bank Branch Address-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/global_16dp"
            android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bank_branch"
            style="@style/NormalTextView" />



        <TextView
            android:id="@+id/bank_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/NormalTextViewItalic" />

        </LinearLayout>


            <!--Bkash Number-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/global_16dp"
            android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bkash"
            style="@style/NormalTextView" />



        <TextView
            android:id="@+id/bkash_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/NormalTextViewItalic" />

        </LinearLayout>


              <!--  Rocket number  -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/global_16dp"
            android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rocket"
            style="@style/NormalTextView" />



        <TextView
            android:id="@+id/rocket_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/NormalTextViewItalic" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>