<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragment.BusinessInfoFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/global_8dp">


        <!--Business Name-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/global_16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/business_name"
            style="@style/NormalTextView" />


        <TextView
            android:id="@+id/business_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/NormalTextViewItalic" />

    </LinearLayout>


        <!--Business nature-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/global_16dp"
            android:orientation="vertical">

            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/business_nature"
            style="@style/NormalTextView" />


            <TextView
            android:id="@+id/business_nature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/NormalTextViewItalic" />

        </LinearLayout>


            <!--Product type-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/global_16dp"
            android:orientation="vertical">


            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pro_type"
            style="@style/NormalTextView" />


            <TextView
            android:id="@+id/product_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/NormalTextViewItalic"/>

        </LinearLayout>


    <!--Website-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/global_16dp"
            android:orientation="vertical">


            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/website"
            style="@style/NormalTextView" />


            <TextView
            android:id="@+id/website"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/NormalTextViewItalic" />

        </LinearLayout>

        <!--Facebook page-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/global_16dp"
            android:orientation="vertical">

            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fb_page"
            style="@style/NormalTextView" />


            <TextView
            android:id="@+id/fb_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/NormalTextViewItalic" />

        </LinearLayout>



        <!--FB page Link-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/global_16dp"
            android:orientation="vertical">

            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fb_page_link"
            style="@style/NormalTextView" />


            <TextView
            android:id="@+id/fb_page_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/NormalTextViewItalic" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>