<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.ContactInfoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/global_8dp">


        <!--Contact person name-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/global_16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_name"
                style="@style/NormalTextView" />


            <TextView
                android:id="@+id/contactName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/NormalTextViewItalic" />

        </LinearLayout>


        <!--Contact Person Position-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/global_16dp"
            android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_person_pos"
            style="@style/NormalTextView" />



        <TextView
            android:id="@+id/contactPersonPosition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/NormalTextViewItalic" />

        </LinearLayout>


        <!--Contact Number-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/global_16dp"
            android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mer_contact"
            style="@style/NormalTextView" />


        <TextView
            android:id="@+id/contactNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/NormalTextViewItalic" />

        </LinearLayout>


            <!--Contact Email-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/global_16dp"
            android:orientation="vertical">


            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_mail"
            style="@style/NormalTextView" />


            <TextView
            android:id="@+id/contactEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/NormalTextViewItalic" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>